# lab-django-demo

./: .gitignore  .gitmodules  Dockerfile  README.md  deploy-dev.sh  deploy.sh  entry-point.sh  pyproject.toml  requirements.txt
config/: __init__.py  settings.private.sample.toml  settings.toml
my_app/: admin.py  models.py  urls.py  views.py
my_app/migrations/: 0001_initial.py  0002_history_like.py  0002_likemodel.py  0003_auto_20220719_1454.py
my_site/: settings.py  urls.py
my_site/config/: base.py  development.py  production.py  test.py  testing.py
my_site/rest/: models.py  response.py  routers.py  views.py
my_site/restful/: models.py  response.py  routers.py  views.py
myapp/: admin.py
mysite/: settings.py  urls.py
mysite/config/: base.py  development.py  production.py  test.py
run/: entry-point.sh  setup.sh  uwsgi.ini
