# [Specifying Minimum Build System Requirements for Python Projects](https://www.python.org/dev/peps/pep-0518/)

# The [project] table is used to store project's core metadata.
[project]
requires-python = ">=3.9"  # PEP 621 specifications.
dependencies = []  # PEP 631 specifications.

# The [build-system] table is used to store build-related data.
[build-system]
requires = ["poetry-core>=1.0.0"]  # PEP 508 specifications.
build-backend = "poetry.core.masonry.api"

# The [install-system] table is used to store install-system relevant data and information.
# [install-system]
# requires = ["pipenv"]  # PEP 650 specifications.
# install-backend = "pipenv.api:main"

# The [tool] table is where any tool related to your Python project, not just build tools,
#   can have users specify configuration data as long as they use a sub-table within [tool],
#   e.g. the black tool would store its configuration in [tool.black].
[tool]

# [Black](https://black.readthedocs.io/)
[tool.black]
# [Configurations](https://black.readthedocs.io/en/stable/compatible_configs.html)
# If you're asking yourself "Do I need to configure anything?" the answer is "No".
#   `Black` is all about sensible defaults.

# [Poetry](https://python-poetry.org/)
[tool.poetry]
name = "lab-django-demo"
version = "0.1.0"
description = ""
authors = ["KevInZhao <hellozhaowenkai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
Django = "^3.1.7"
mysqlclient = "^2.0.3"
uWSGI = "^2.0.19"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[[tool.poetry.source]]
default = true
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
